Expanded Work Experience section, especially Control-Tec; More details in Technical Skills and Software; Added Hobbies to Personal section

--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -28,7 +28,7 @@
 Seeking a full-time software engineering position. I have 2+ years experience in
 embedded Linux software development in C++, and a year of experience in data
 processing and machine learning in Python. I am a motivated and hard-working
-individual with an desire to make a difference and collaborate with
+individual with a desire to make a difference and collaborate with
 like-minded people.
 
 \vspace{-10pt}
@@ -60,24 +60,47 @@ GPA: 3.94/4.0\\
 \textsl{C++ Software Developer, Embedded Linux} \hfill May 2017 - Present
 \begin{itemize}
 	\itemsep -2pt
-    \item Developed next-generation automotive data collection software for\\
-          live data-processing applications.
+    \item Developed next-generation automotive data collection software for a\\
+          live data-processing application called CT-EDGE. This software\\
+          collects data from the vehicle using broadcast CAN and standardized\\
+          request formats including J1979 and UDS, and can analyze the data\\
+          based on configurable triggers to send notifications and telemetry\\
+          to a cloud server over a cellular connection.
+    \item Gained extensive experience with the Legato embedded Linux IoT\\
+          platform. The platform is similar to Android, where developers\\
+          can create sandboxed "apps" that communicate through secure IPC.\\
+          This allowed our team to improve security by separating\\
+          functionalities such as vehicle data collection, cloud communication,\\
+          and over-the-air firmware updates.
     \item Managed a small team of engineers to assist in software development\\
           and white-box testing.
-    \item Extensive experience with Legato embedded Linux IoT platform.
 \end{itemize}
 
+\vspace{-10pt}
 \textbf{Merit Network, Inc.} \hfill Ann Arbor, MI\\
 \textsl{Research Assistant, Data Analyst} \hfill May 2016 - May 2017
 \begin{itemize}
 	\itemsep -2pt
-	\item Worked in Security Research division under Dr. Michalis Kallitsis
-    \item Assisted with developing Machine Learning algorithms and tools to\\
-          detect false data injection attacks on the smart grid.
+    \item Research assistant in Security Research division under Dr. Michalis\\
+          Kallitsis, whose primary research focused on anomaly detection for\\
+          early warnings of Distributed Denial of Service attacks and other\\
+          malicious data-injection attacks.
+    \item Assisted with a project to develop Machine Learning algorithms and\\
+          tools to detect false data injection attacks on a smart electrical\\
+          grid. The goal was to prevent an attacker from manipulating a\\
+          homeowner's electricity usage. This was done by monitoring sensors\\
+          in the home (such as temperature, humidity, and noise volume) and\\
+          using a prediction model to estimate what the eletrical usage should\\
+          be. I wrote scripts to aggregate the data, store it in a database,\\
+          feed the data to the algorithm (designed by Dr. Kallitsis) and\\
+          interpret the results.
     \item Primary author on a research paper detailing an experiment conducted\\
-          at NextEnergy in Detroit, MI, to test custom analysis software in a\\
-          real-world environment.
+          at a facility in Detroit, MI, to test the custom analysis software\\
+          we had designed in a real-world environment. The paper was presented\\
+          by Dr. Kallitsis at a conference for IoT Smart Grid applications.
 \end{itemize}
+
+\pagebreak
 
 \vspace{-10pt}
 \textbf{Innovative Devices, Inc.} \hfill Bedford Hts., OH\\
@@ -96,12 +119,34 @@ GPA: 3.94/4.0\\
 
 \vspace{-10pt}
 \section{TECHNICAL SKILLS}
-\textbf{Programming Languages:}
-Proficient in C, C++, and Python; familiar with HTML\\
+\textbf{Programming Languages:}\\
+\vspace{-10pt}
+\begin{itemize}
+	\itemsep -2pt
+    \item Proficient in C, C++, and Python.
+    \item Comfortable with Matlab and Bash.
+    \item Also worked with Ruby, HTML, PHP, C\#, Java, and Mathematica.
+    \item Familiar with Object-Oriented and Functional design strategies.
+    \item This resume was created with LaTeX.
+          You can view the source files on my GitHub page (see bottom).
+\end{itemize}
+
+\vspace{-10pt}
 \textbf{Software:}
-Microsoft Word and Excel, MATLAB, LaTeX, Git\\
+\begin{itemize}
+	\itemsep -2pt
+    \item Linux and Windows user, especially Linux command line tools.
+    \item Git version control
+    \item Many years of experience with Microsoft Word, Excel, and PowerPoint
+\end{itemize}
+
+\vspace{-10pt}
 \textbf{Hardware:}
-Experience designing custom PCBs using Eagle and soldering by hand
+\begin{itemize}
+	\itemsep -2pt
+    \item Designed custom PCBs using Eagle design software.
+    \item Experienced with hand soldering PCBs and components.
+\end{itemize}
 
 \vspace{-10pt}
 \section{PERSONAL}
@@ -109,8 +154,10 @@ Experience designing custom PCBs using Eagle and soldering by hand
 \textsl{Trumpet Player}\\
 \textsl{Manager, MMB Merchandise Staff from 2014-2015}\\
 \textsl{Treasurer, Tau Beta Sigma Honorary Band Society from 2015-2017}\\
+\\
+\textbf{Favorite Text Editor:} Visual Studio Code (GUI), Vim (terminal)\\
+\textbf{Hobbies:} Playing trumpet, building gadgets, video games
 
-\vspace{-20pt}
 \section{WEBSITES}
 \textbf{LinkedIn:}
 \href{https://www.linkedin.com/in/adrian-padin-320a34a4}{https://www.linkedin.com/in/adrian-padin-320a34a4}\\
