Updated README instructions

--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -136,7 +136,8 @@ GPA: 3.94/4.0\\
 \begin{itemize}
 	\itemsep -2pt
     \item Linux and Windows user, especially Linux command line tools.
-    \item Git version control
+    \item Git version control.
+    \item Google Test (gtest) unit test framework
     \item Many years of experience with Microsoft Word, Excel, and PowerPoint
 \end{itemize}
 
@@ -156,6 +157,7 @@ GPA: 3.94/4.0\\
 \textsl{Treasurer, Tau Beta Sigma Honorary Band Society from 2015-2017}\\
 \\
 \textbf{Favorite Text Editor:} Visual Studio Code (GUI), Vim (terminal)\\
+\textbf{Favorite Browser:} Firefox\\
 \textbf{Hobbies:} Playing trumpet, building gadgets, video games
 
 \section{WEBSITES}
