--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -18,18 +18,129 @@
 %\moveleft.5\hoffset\vbox{\hrule width\resumewidth height 1pt}
 \moveleft\hoffset\vbox{\hrule width 7.2in height 1pt}
 % Address centered over entire width of resume:
-\moveleft.5\hoffset\centerline{326 E. Madison St, Ann Arbor, MI 48104}
-\moveleft.5\hoffset\centerline{apadin@umich.edu $\cdot$ (440) 724-9273}
+\moveleft.5\hoffset\centerline{3744 Fairway Park Drive, Copley, OH 44321}
+\moveleft.5\hoffset\centerline{padin.adrian@gmail.com $\cdot$ (440) 724-9273}
 
 \vspace{-20pt}
 \begin{resume}
 
 \section{SUMMARY}
 Seeking a full-time software engineering position. I have 2+ years experience in
-embedded Linux software development in C++, and a year of experience in data
-processing and machine learning in Python. I am a motivated and hard-working
-individual with a desire to make a difference and collaborate with
-like-minded people.
+embedded software development in C++, and 3 years experience in ERP business
+software using Wolfram Language and Mathematica. I am a motivated and hard-working
+individual with a desire to make a difference and collaborate with like-minded people.
+
+\section{WORK EXPERIENCE}
+
+\textbf{Wolfram Research, Inc.} \hfill Champaign, IL\\
+\textsl{Wolfram Language Developer, ERP Business Software} \hfill April 2019 - Present
+\begin{itemize}
+    \itemsep -2pt
+    \item Wolfram Research Inc. develops software which enables students,
+          researchers, and businesses to perform computation and analyze data
+          for a variety of use cases. Their main products are Mathematica and
+          Wolfram Alpha, which both make use of the Wolfram programming language.
+    \item As part of a team of 6+ developers, created a custom ERP system to
+          handle order processing and product licensing for Mathematica, Wolfram
+          Alpha, and every other Wolfram product. This system made use of
+          EntityLink, a framework we designed which can generate both a database
+          schema and an API for creating, updating, and retrieving structured
+          data using a single set of configuration files.
+    \item Made significant code and infrastructure contributions, including
+          developing a job queuing system to handle asynchronous tasks in a
+          timely manner, implemented using the same EntityLink framework and
+          Wolfram language code.
+\end{itemize}
+
+\vspace{-10pt}
+\textbf{Control-Tec, LLC.} \hfill Allen Park, MI\\
+\textsl{C++ Software Developer, Embedded Linux} \hfill May 2017 - April 2019
+\begin{itemize}
+    \itemsep -2pt
+    \item Developed next-generation automotive data collection software for a
+          live data-processing application called CT-EDGE. This software
+          collects data from the vehicle using broadcast CAN and standardized
+          request formats including J1979 and UDS, and can analyze the data
+          based on configurable triggers to send notifications and telemetry
+          to a cloud server over a cellular connection.
+    \item Gained extensive experience with the Legato embedded Linux IoT
+          platform. The platform is similar to Android, where developers
+          can create sandboxed "apps" that communicate through secure IPC.
+          This allowed our team to improve security by separating
+          functionalities such as vehicle data collection, cloud communication,
+          and over-the-air firmware updates.
+    \item Managed a small team of engineers to assist in software development
+          and white-box testing.
+\end{itemize}
+
+\vspace{-10pt}
+\textbf{Merit Network, Inc.} \hfill Ann Arbor, MI\\
+\textsl{Research Assistant, Data Analyst} \hfill May 2016 - May 2017
+\begin{itemize}
+    \itemsep -2pt
+    \item Research assistant in under Dr. Michalis Kallitsis, researching anomaly
+          detection for early warnings of Distributed Denial of Service attacks
+          and other malicious data-injection attacks.
+    \item Assisted with a project to develop Machine Learning algorithms and
+          tools to detect false data injection attacks on a smart electrical
+          grid. The goal was to prevent an attacker from manipulating a
+          homeowner's electricity usage. I wrote scripts to aggregate the data
+          from various sensors, feed the it to the algorithm and interpret the
+          results.
+    \item Primary author on a research paper detailing an experiment conducted
+          at a facility in Detroit, MI, to test the custom analysis software
+          we had designed in a real-world environment. The paper was presented
+          by Dr. Kallitsis at a conference for IoT Smart Grid applications.
+\end{itemize}
+
+\pagebreak
+
+\vspace{-10pt}
+\textbf{Innovative Devices, Inc.} \hfill Bedford Hts., OH\\
+\textsl{Software Engineering Intern} \hfill May 2015 - Sept 2015
+\begin{itemize}
+    \itemsep -2pt
+    \item Assisted in research and development of the Mycestro wearable computer
+          mouse and worked with a team of engineers to develop integration
+          software in Python and Ruby for using the Mycestro as a 3D mouse.
+    \item Wrote Python plugins to model rotations of simulated objects using
+          matrix rotations and vector mathematics. Motion data from the Mycestro
+          was then used to control these rotations.
+    \item Attended patent strategy and business development meetings, and gave
+          sales presentations to potential investors.
+\end{itemize}
+
+\vspace{-10pt}
+\section{TECHNICAL SKILLS}
+\textbf{Programming Languages:}\\
+\vspace{-10pt}
+\begin{itemize}
+    \itemsep -2pt
+    \item Proficient in C, C++, Python, and Mathematica.
+    \item Comfortable with HTML and Bash.
+    \item Also worked with Ruby, PHP, C\#, Java, and Matlab.
+    \item Familiar with Object-Oriented and Functional design strategies.
+    \item This resume was created with LaTeX.
+          You can view the source files on my GitHub page (see bottom).
+\end{itemize}
+
+\vspace{-10pt}
+\textbf{Software:}
+\begin{itemize}
+    \itemsep -2pt
+    \item Git version control.
+    \item Google Test (gtest) unit test framework.
+    \item Linux and Windows user, especially Linux command line tools.
+    \item Many years of experience with Microsoft Word, Excel, and PowerPoint.
+\end{itemize}
+
+\vspace{-10pt}
+\textbf{Hardware:}
+\begin{itemize}
+    \itemsep -2pt
+    \item Designed custom PCBs using Eagle design software.
+    \item Experienced with hand soldering PCBs and components.
+\end{itemize}
 
 \vspace{-10pt}
 \section{EDUCATION}
@@ -46,110 +157,15 @@ GPA: 3.94/4.0\\
 \\
 \vspace{-10pt}
 \begin{tabular}{l l}
-%	EECS 280: Electromagnetics I & PHYS 340: Waves, Heat, and Light\\
-%	EECS 330: Electromagnetics II & EECS 320: Semiconductor Devices\\
-%	EECS 351: Digital Signal Processing & EECS 475: Cryptography\\
+%    EECS 280: Electromagnetics I & PHYS 340: Waves, Heat, and Light\\
+%    EECS 330: Electromagnetics II & EECS 320: Semiconductor Devices\\
+%    EECS 351: Digital Signal Processing & EECS 475: Cryptography\\
 %   EECS 473: Advanced Embedded Systems & (Senior Design Project)\\
     EECS 473: Advanced Embedded Systems & EECS 482: Operating Systems\\
     EECS 461: Embedded Control Systems & EECS 445: Machine Learning\\
-	EECS 373: Microprocessor Programming & EECS 388: Computer Security\\
+    EECS 373: Microprocessor Programming & EECS 388: Computer Security\\
 \end{tabular}
 
-\section{WORK EXPERIENCE}
-\textbf{Control-Tec, LLC.} \hfill Allen Park, MI\\
-\textsl{C++ Software Developer, Embedded Linux} \hfill May 2017 - Present
-\begin{itemize}
-	\itemsep -2pt
-    \item Developed next-generation automotive data collection software for a\\
-          live data-processing application called CT-EDGE. This software\\
-          collects data from the vehicle using broadcast CAN and standardized\\
-          request formats including J1979 and UDS, and can analyze the data\\
-          based on configurable triggers to send notifications and telemetry\\
-          to a cloud server over a cellular connection.
-    \item Gained extensive experience with the Legato embedded Linux IoT\\
-          platform. The platform is similar to Android, where developers\\
-          can create sandboxed "apps" that communicate through secure IPC.\\
-          This allowed our team to improve security by separating\\
-          functionalities such as vehicle data collection, cloud communication,\\
-          and over-the-air firmware updates.
-    \item Managed a small team of engineers to assist in software development\\
-          and white-box testing.
-\end{itemize}
-
-\vspace{-10pt}
-\textbf{Merit Network, Inc.} \hfill Ann Arbor, MI\\
-\textsl{Research Assistant, Data Analyst} \hfill May 2016 - May 2017
-\begin{itemize}
-	\itemsep -2pt
-    \item Research assistant in Security Research division under Dr. Michalis\\
-          Kallitsis, whose primary research focused on anomaly detection for\\
-          early warnings of Distributed Denial of Service attacks and other\\
-          malicious data-injection attacks.
-    \item Assisted with a project to develop Machine Learning algorithms and\\
-          tools to detect false data injection attacks on a smart electrical\\
-          grid. The goal was to prevent an attacker from manipulating a\\
-          homeowner's electricity usage. This was done by monitoring sensors\\
-          in the home (such as temperature, humidity, and noise volume) and\\
-          using a prediction model to estimate what the eletrical usage should\\
-          be. I wrote scripts to aggregate the data, store it in a database,\\
-          feed the data to the algorithm (designed by Dr. Kallitsis) and\\
-          interpret the results.
-    \item Primary author on a research paper detailing an experiment conducted\\
-          at a facility in Detroit, MI, to test the custom analysis software\\
-          we had designed in a real-world environment. The paper was presented\\
-          by Dr. Kallitsis at a conference for IoT Smart Grid applications.
-\end{itemize}
-
-\pagebreak
-
-\vspace{-10pt}
-\textbf{Innovative Devices, Inc.} \hfill Bedford Hts., OH\\
-\textsl{Software Engineering Intern} \hfill May 2015 - Sept 2015
-\begin{itemize}
-	\itemsep -2pt
-    \item Assisted in research and development of the Mycestro wearable computer\\
-          mouse and worked with a team of engineers to develop integration\\
-          software in Python and Ruby for using the Mycestro as a 3D mouse.
-    \item Wrote Python plugins to model rotations of simulated objects using\\
-          matrix rotations and vector mathematics. Motion data from the Mycestro\\
-          was then used to control these rotations.
-    \item Attended patent strategy and business development meetings, and gave\\
-          sales presentations to potential investors.
-\end{itemize}
-
-\vspace{-10pt}
-\section{TECHNICAL SKILLS}
-\textbf{Programming Languages:}\\
-\vspace{-10pt}
-\begin{itemize}
-	\itemsep -2pt
-    \item Proficient in C, C++, and Python.
-    \item Comfortable with Matlab and Bash.
-    \item Also worked with Ruby, HTML, PHP, C\#, Java, and Mathematica.
-    \item Familiar with Object-Oriented and Functional design strategies.
-    \item This resume was created with LaTeX.
-          You can view the source files on my GitHub page (see bottom).
-\end{itemize}
-
-\vspace{-10pt}
-\textbf{Software:}
-\begin{itemize}
-	\itemsep -2pt
-    \item Linux and Windows user, especially Linux command line tools.
-    \item Git version control.
-    \item Google Test (gtest) unit test framework
-    \item Many years of experience with Microsoft Word, Excel, and PowerPoint
-\end{itemize}
-
-\vspace{-10pt}
-\textbf{Hardware:}
-\begin{itemize}
-	\itemsep -2pt
-    \item Designed custom PCBs using Eagle design software.
-    \item Experienced with hand soldering PCBs and components.
-\end{itemize}
-
-\vspace{-10pt}
 \section{PERSONAL}
 \textbf{University of Michigan Marching Band} \hfill Aug 2013 - May 2017\\
 \textsl{Trumpet Player}\\
@@ -163,11 +179,8 @@ GPA: 3.94/4.0\\
 \section{WEBSITES}
 \textbf{LinkedIn:}
 \href{https://www.linkedin.com/in/adrian-padin-320a34a4}{https://www.linkedin.com/in/adrian-padin-320a34a4}\\
-\textbf{GitHub:}
-\href{https://github.com/padinadrian}{https://github.com/padinadrian}\\
-\textbf{Stack Overflow:}
-\href{https://stackoverflow.com/users/story/5179394}{https://stackoverflow.com/users/story/5179394}\\
-
+\textbf{Github (resume source):}
+\href{https://github.com/padinadrian/resume}{https://github.com/padinadrian/resume}\\
 
 \vspace{10pt}
 \moveleft.5\hoffset\centerline{\large\bf References available upon request}
