Add Hubbell work experience and fix formatting

--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -18,22 +18,44 @@
 %\moveleft.5\hoffset\vbox{\hrule width\resumewidth height 1pt}
 \moveleft\hoffset\vbox{\hrule width 7.2in height 1pt}
 % Address centered over entire width of resume:
-\moveleft.5\hoffset\centerline{3744 Fairway Park Drive, Copley, OH 44321}
+\moveleft.5\hoffset\centerline{44 Windgate Circle, Fishersville, VA 22939}
 \moveleft.5\hoffset\centerline{padin.adrian@gmail.com $\cdot$ (440) 724-9273}
 
 \vspace{-20pt}
 \begin{resume}
 
 \section{SUMMARY}
-Seeking a full-time software engineering position. I have 2+ years experience in
-embedded software development in C++, and 3 years experience in ERP business
-software using Wolfram Language and Mathematica. I am a motivated and hard-working
-individual with a desire to make a difference and collaborate with like-minded people.
+Seeking a full-time software engineering position.
+I have 4+ years experience in embedded software development in C, C++, and Rust;
+and 4 years experience in ERP business software using Wolfram Language and
+Mathematica.
+I am a motivated and hard-working individual with a desire to make a difference
+and collaborate with like-minded people.
 
 \section{WORK EXPERIENCE}
 
+\textbf{Hubbell, Inc. / Aclara LLC} \hfill Solon, OH\\
+\textsl{Senior Firmware Engineer} \hfill July 2023 - Present
+\begin{itemize}
+    \itemsep -2pt
+    \item Hubbell, Inc. is a global company that provides electrical equipment
+          and infrastructure for consumers and utility providers.
+          Aclara is a division of Hubbell that specializes in metering
+          infrastructure for gas, water, and electrical utility systems.
+    \item Served as one of the primary developers for Acalara's next generation
+          line of meter data collection and monitoring system.
+          Developed firmware for the Base Station, the device that collects and
+          aggregates meter data for all meters in the surrounding area.
+          Meter data is collected wirelessly with a custom RF protocol and then
+          sent over an ethernet or cell connection to a cloud server.
+    \item Primary developer for the part of the Base Station firmware which
+          implemented the application layer of the custom RF protocol, focused
+          on collecting and parsing gas and water meter data.
+    \item Developed code primarily in Rust, which I had no prior experience with.
+\end{itemize}
+
 \textbf{Wolfram Research, Inc.} \hfill Champaign, IL\\
-\textsl{Wolfram Language Developer, ERP Business Software} \hfill April 2019 - Present
+\textsl{Wolfram Language Developer, ERP Business Software} \hfill April 2019 - July 2023
 \begin{itemize}
     \itemsep -2pt
     \item Wolfram Research Inc. develops software which enables students,
@@ -73,13 +95,15 @@ individual with a desire to make a difference and collaborate with like-minded p
           and white-box testing.
 \end{itemize}
 
+\pagebreak
+
 \vspace{-10pt}
 \textbf{Merit Network, Inc.} \hfill Ann Arbor, MI\\
 \textsl{Research Assistant, Data Analyst} \hfill May 2016 - May 2017
 \begin{itemize}
     \itemsep -2pt
-    \item Research assistant in under Dr. Michalis Kallitsis, researching anomaly
-          detection for early warnings of Distributed Denial of Service attacks
+    \item Research assistant under Dr. Michalis Kallitsis, researching anomaly
+          detection for early warnings of Distributed Denial-of-Service attacks
           and other malicious data-injection attacks.
     \item Assisted with a project to develop Machine Learning algorithms and
           tools to detect false data injection attacks on a smart electrical
@@ -93,8 +117,6 @@ individual with a desire to make a difference and collaborate with like-minded p
           by Dr. Kallitsis at a conference for IoT Smart Grid applications.
 \end{itemize}
 
-\pagebreak
-
 \vspace{-10pt}
 \textbf{Innovative Devices, Inc.} \hfill Bedford Hts., OH\\
 \textsl{Software Engineering Intern} \hfill May 2015 - Sept 2015
@@ -106,8 +128,8 @@ individual with a desire to make a difference and collaborate with like-minded p
     \item Wrote Python plugins to model rotations of simulated objects using
           matrix rotations and vector mathematics. Motion data from the Mycestro
           was then used to control these rotations.
-    \item Attended patent strategy and business development meetings, and gave
-          sales presentations to potential investors.
+%     \item Attended patent strategy and business development meetings, and gave
+%           sales presentations to potential investors.
 \end{itemize}
 
 \vspace{-10pt}
@@ -116,8 +138,8 @@ individual with a desire to make a difference and collaborate with like-minded p
 \vspace{-10pt}
 \begin{itemize}
     \itemsep -2pt
-    \item Proficient in C, C++, Python, and Mathematica.
-    \item Comfortable with HTML and Bash.
+    \item Proficient in C, C++, Rust, Python, and Mathematica / Wolfram Language.
+    \item Comfortable with HTML, Javascript, and Bash.
     \item Also worked with Ruby, PHP, C\#, Java, and Matlab.
     \item Familiar with Object-Oriented and Functional design strategies.
     \item This resume was created with LaTeX.
@@ -131,7 +153,7 @@ individual with a desire to make a difference and collaborate with like-minded p
     \item Git version control.
     \item Google Test (gtest) unit test framework.
     \item Linux and Windows user, especially Linux command line tools.
-    \item Many years of experience with Microsoft Word, Excel, and PowerPoint.
+%     \item Many years of experience with Microsoft Word, Excel, and PowerPoint.
 \end{itemize}
 
 \vspace{-10pt}
@@ -166,6 +188,8 @@ GPA: 3.94/4.0\\
     EECS 373: Microprocessor Programming & EECS 388: Computer Security\\
 \end{tabular}
 
+\pagebreak
+
 \section{PERSONAL}
 \textbf{University of Michigan Marching Band} \hfill Aug 2013 - May 2017\\
 \textsl{Trumpet Player}\\
@@ -179,7 +203,7 @@ GPA: 3.94/4.0\\
 \section{WEBSITES}
 \textbf{LinkedIn:}
 \href{https://www.linkedin.com/in/adrian-padin-320a34a4}{https://www.linkedin.com/in/adrian-padin-320a34a4}\\
-\textbf{Github (resume source):}
+\textbf{Github (resume source code):}
 \href{https://github.com/padinadrian/resume}{https://github.com/padinadrian/resume}\\
 
 \vspace{10pt}
