Fix spelling error: 'Acalara' -> 'Aclara'

--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -42,7 +42,7 @@ and collaborate with like-minded people.
           and infrastructure for consumers and utility providers.
           Aclara is a division of Hubbell that specializes in metering
           infrastructure for gas, water, and electrical utility systems.
-    \item Served as one of the primary developers for Acalara's next generation
+    \item Served as one of the primary developers for Aclara's next generation
           line of meter data collection and monitoring system.
           Developed firmware for the Base Station, the device that collects and
           aggregates meter data for all meters in the surrounding area.
