Update address; Jira + Azure DevOps; small edits

--- a/AdrianPadinResume.tex
+++ b/AdrianPadinResume.tex
@@ -18,7 +18,7 @@
 %\moveleft.5\hoffset\vbox{\hrule width\resumewidth height 1pt}
 \moveleft\hoffset\vbox{\hrule width 7.2in height 1pt}
 % Address centered over entire width of resume:
-\moveleft.5\hoffset\centerline{44 Windgate Circle, Fishersville, VA 22939}
+\moveleft.5\hoffset\centerline{331 Pemberton Park Ln, Frederick, MD 21703}
 \moveleft.5\hoffset\centerline{padin.adrian@gmail.com $\cdot$ (440) 724-9273}
 
 \vspace{-20pt}
@@ -46,12 +46,14 @@ and collaborate with like-minded people.
           line of meter data collection and monitoring system.
           Developed firmware for the Base Station, the device that collects and
           aggregates meter data for all meters in the surrounding area.
-          Meter data is collected wirelessly with a custom RF protocol and then
+          Meter data is collected wirelessly with a proprietary RF protocol and then
           sent over an ethernet or cell connection to a cloud server.
     \item Primary developer for the part of the Base Station firmware which
-          implemented the application layer of the custom RF protocol, focused
+          implemented the application layer of the proprietary RF protocol, focused
           on collecting and parsing gas and water meter data.
-    \item Developed code primarily in Rust, which I had no prior experience with.
+    \item Developed code primarily in Rust, which I had no experience with prior
+          to starting this project. I was able to quickly learn the language in
+          just a few weeks before I was ready to start contributing.
 \end{itemize}
 
 \textbf{Wolfram Research, Inc.} \hfill Champaign, IL\\
@@ -139,8 +141,8 @@ and collaborate with like-minded people.
 \begin{itemize}
     \itemsep -2pt
     \item Proficient in C, C++, Rust, Python, and Mathematica / Wolfram Language.
-    \item Comfortable with HTML, Javascript, and Bash.
-    \item Also worked with Ruby, PHP, C\#, Java, and Matlab.
+    \item Comfortable with HTML, JavaScript, JSON, and Bash.
+    \item Also worked with Ruby, PHP, C\#, and Java.
     \item Familiar with Object-Oriented and Functional design strategies.
     \item This resume was created with LaTeX.
           You can view the source files on my GitHub page (see bottom).
@@ -151,6 +153,7 @@ and collaborate with like-minded people.
 \begin{itemize}
     \itemsep -2pt
     \item Git version control.
+    \item Experienced with Jira/Atlassian and Azure DevOps for project management.
     \item Google Test (gtest) unit test framework.
     \item Linux and Windows user, especially Linux command line tools.
 %     \item Many years of experience with Microsoft Word, Excel, and PowerPoint.
